style: add footer styling for desktop, fix overflow

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 * {
   margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
@@ -225,5 +226,92 @@ footer p {
 
   footer h2 {
     padding-bottom: 20px;
+  }
+}
+
+@media (min-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .header-color-block {
+    width: 100vw;
+    height: 400px;
+    transform: translateY(-300px) skewY(-4deg);
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 60px 0px;
+  }
+
+  .banner {
+    align-self: center;
+    margin-top: 0px;
+    width: 70vw;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: row;
+    height: max-content;
+  }
+
+  .portrait-container {
+    float: none;
+    transform: translate(0px, 0px);
+    margin: 0px;
+    transform: scale(1.2);
+  }
+
+  .image-text {
+    transform: scale(0.8) translate(30%, 410%);
+  }
+
+  .portrait-container img {
+    margin: 0px;
+  }
+
+  .about-me {
+    margin: 0px;
+    padding: 0px;
+    padding-left: 30px;
+  }
+
+  .about-me h2 {
+    text-align: left;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-bottom: 15px;
+  }
+
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    column-gap: 30px;
+    row-gap: 30px;
+    margin-bottom: 30px;
+  }
+
+  main h2 {
+    align-self: start;
+    padding-left: 60px;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    /* width: 100; */
+    padding: 0px;
+    margin: 0px;
+    /* width: 1375px */
+  }
+
+  .icon-container {
+    padding-top: 25px;
+    justify-content: start;
   }
 }
